designed the notes section as figma design

--- a/index.html
+++ b/index.html
@@ -30,13 +30,45 @@
     </header>
     <section class="hero">
         <div class="hero-container">
-            <p class="early"><span class="dot"></span> Early Access Now Open</p>
+            <div class="early-badge">
+                <span class="dot"></span>
+                <p>Early Access Now Open</p></div>
             <h1>Structured Thinking, <br><span> Not Just Note-Taking.</span></h1>
            <p class="hero-p">A private space to store notes, links, and learning summaries — designed to <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
            <div class="hero-btn">
             <button class="btn">Start Building Your Vault →</button>
             <button class="btn2"><i class="fa-solid fa-play"></i> See How It Works</button>
         </div>
+        </div>
+    </section>
+    <section class="notes">
+        <div class="notes-container">
+            <div class="notes-heading">
+                <h1>Notes Don't Fail, Structure Does.</h1>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+            <div class="notes-cardbox">
+                <div class="card">
+                    <img src="./images/Vector.png" alt="">
+                    <h2>Scattered notes</h2>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Vector.png" alt="">
+                    <h2>Scattered notes</h2>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Vector.png" alt="">
+                    <h2>Scattered notes</h2>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/Vector.png" alt="">
+                    <h2>Scattered notes</h2>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
