finished the solution and ready section and fixed the previous bugs

--- a/index.html
+++ b/index.html
@@ -50,24 +50,52 @@
             <div class="notes-cardbox">
                 <div class="card">
                     <img src="./images/Vector.png" alt="">
-                    <h2>Scattered notes</h2>
+                    <h2 class="card-h2">Scattered notes</h2>
                     <p>Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="card">
-                    <img src="./images/Vector.png" alt="">
-                    <h2>Scattered notes</h2>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <img src="./images/Bookmarks.png" alt="">
+                    <h2 class="card-h2">Bookmark overload</h2>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
                 </div>
                 <div class="card">
-                    <img src="./images/Vector.png" alt="">
-                    <h2>Scattered notes</h2>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <img src="./images/Brain.png" alt="">
+                    <h2 class="card-h2">No idea connections</h2>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
                 </div>
                 <div class="card">
-                    <img src="./images/Vector.png" alt="">
-                    <h2>Scattered notes</h2>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <img src="./images/Info.png" alt="">
+                    <h2 class="card-h2">Forgetting what you learned</h2>
+                    <p>Knowledge fades because there's no system to retain it.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="solution">
+        <div class="solution-container">
+            <div class="solution-img"><img src="./images/knowledge.png" alt=""></div>
+            <div class="solution-info">
+                <p class="green">THE SOLUTION</p>
+                <h1>Your Second Brain,<br>Structured By Design.</h1>
+                <p class="grey">Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summarybecomes part of an interconnected web of understanding.</p>
+                <ul>
+                    <li><img src="./images/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
+                    <li><img src="./images/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
+                    <li><img src="./images/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+                    <li><img src="./images/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="ready">
+        <div class="ready-container">
+            <div class="ready-content">
+                <h1>Ready To Think More Clearly?</h1>
+                <p>Join thousands of learners who are building their personal knowledge. <br>Start free, no credit card required.</p>
+            </div>
+            <div class="ready-button">
+                <button class="btn">Get Early Access →</button>
+                <p>Free during early access • No credit card needed</p>
             </div>
         </div>
     </section>
