--- a/index.html
+++ b/index.html
@@ -99,5 +99,22 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="main">
+        
+            <div class="ftr-img"><img src="./images/logo-footer.png" alt=""></div>
+            <div class="social">
+                <p>Social Links</p>
+                <div class="icons">
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
+                </div>
+            </div>
+            
+        </div>
+        <hr>
+        <p class="main-p">&copy;2026 Personal Knowledge Vault. All rights reserved.</p>
+    </footer>
 </body>
 </html>
